--- a/Netflix/netflix.html
+++ b/Netflix/netflix.html
@@ -26,10 +26,11 @@
             <span>Ready to watch? Enter your email to create or restart your membership.</span>
             <div class="email">
                 <input type="email" name="Email Address" placeholder="Email Address" id="email">
-                <button>Get Started›</button>
+                <button>Get Started ›</button>
             </div>
         </div>
     </div>
+    <div class="separation"></div>
     <script src="script.js"></script>
 </body>
 
