--- a/Netflix/netflix.html
+++ b/Netflix/netflix.html
@@ -31,7 +31,121 @@
         </div>
     </div>
     <div class="separation"></div>
+    <section class="first">
+        <div>Enjoy on your TV
+            <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.
+            </p>
+        </div>
+        <div class="image">
+            <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png" alt="image error">
+            <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-in-0819.m4v"
+                autoplay loop muted></video>
+        </div>
+    </section>
+    <div class="separation"></div>
+
+    <section class="first second">
+        <div class="image">
+            <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/mobile-0819.jpg"
+                alt="image error">
+            <!-- <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-in-0819.m4v" autoplay loop muted></video>   -->
+        </div>
+        <div>Download your shows to watch offline
+            <p>Save your favourites easily and always have something to watch.
+            </p>
+        </div>
+    </section>
+    <div class="separation"></div>
+
+    <section class="first">
+        <div>Watch everywhere
+            <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.
+            </p>
+        </div>
+        <div class="image">
+            <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png" alt="image error">
+            <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-devices-in.m4v"
+                autoplay loop muted></video>
+        </div>
+    </section>
+    <div class="separation"></div>
+
+    <section class="first">
+        <div class="image">
+            <img src="https://occ-0-2849-3646.1.nflxso.net/dnm/api/v6/19OhWN2dO19C9txTON9tvTFtefw/AAAABVr8nYuAg0xDpXDv0VI9HUoH7r2aGp4TKRCsKNQrMwxzTtr-NlwOHeS8bCI2oeZddmu3nMYr3j9MjYhHyjBASb1FaOGYZNYvPBCL.png?r=54d"
+                alt="image error">
+            <!-- <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-devices-in.m4v" autoplay loop muted></video>   -->
+        </div>
+        <div>
+            Create profiles for kids
+            <p>Send children on adventures with their favourite characters in a space made just for them—free with your
+                membership.
+            </p>
+        </div>
+    </section>
+    <div class="separation"></div>
+
+    <div class="faq">
+        Frequently Asked Question
+    </div>
+    <div class="faq1">
+        <span>What is Netflix?</span>
+        <span>+</span>
+    </div>
+
+    <div class="faq1">
+        <span>How much does Netflix cost?</span>
+        <span>+</span>
+    </div>
+
+    <div class="faq1">
+        <span>What can I watch on Netflix?</span>
+        <span>+</span>
+    </div>
+
+    <div class="faq1">
+        <span>Where can I watch?</span>
+        <span>+</span>
+    </div>
+    <div class="separation"></div>
+
+<footer>
+    <div class="contact">
+        Questions? Call 000-800-919-1694
+    </div>
+
+    <div class="foot">
+        <div class="con">
+            <a href="#">Investor Relations</a>
+            <a href="#">Jobs</a>
+            <a href="#">Ways to Watch</a>
+            <a href="#">Corporate Information</a>
+        </div>
+
+        <div class="con">
+            <a href="#">Media Centre</a>
+            <a href="#">Privacy</a>
+            <a href="#">Cookie Preferences</a>
+            <a href="#">Legal Notices</a>
+        </div>
+
+        <div class="con">
+            <a href="#">Help Centre</a>
+            <a href="#">Account</a>
+            <a href="#">Speed Test</a>
+            <a href="#">Only on Netflix</a>
+        </div>
+
+        <div class="con">
+            <a href="#">Terms of Use</a>
+            <a href="#">Contact Us</a>
+        </div>
+    </div>
+</footer>
+
+
     <script src="script.js"></script>
+
 </body>
 
 </html>
