--- a/Netflix/netflix.html
+++ b/Netflix/netflix.html
@@ -49,7 +49,6 @@
         <div class="image">
             <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/mobile-0819.jpg"
                 alt="image error">
-            <!-- <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-in-0819.m4v" autoplay loop muted></video>   -->
         </div>
         <div>Download your shows to watch offline
             <p>Save your favourites easily and always have something to watch.
@@ -75,7 +74,6 @@
         <div class="image">
             <img src="https://occ-0-2849-3646.1.nflxso.net/dnm/api/v6/19OhWN2dO19C9txTON9tvTFtefw/AAAABVr8nYuAg0xDpXDv0VI9HUoH7r2aGp4TKRCsKNQrMwxzTtr-NlwOHeS8bCI2oeZddmu3nMYr3j9MjYhHyjBASb1FaOGYZNYvPBCL.png?r=54d"
                 alt="image error">
-            <!-- <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-devices-in.m4v" autoplay loop muted></video>   -->
         </div>
         <div>
             Create profiles for kids
@@ -87,66 +85,76 @@
     <div class="separation"></div>
 
     <div class="faq">
-        Frequently Asked Question
-    </div>
-    <div class="faq1">
-        <span>What is Netflix?</span>
-        <span>+</span>
+        Frequently Asked Questions
     </div>
 
     <div class="faq1">
-        <span>How much does Netflix cost?</span>
-        <span>+</span>
+        <div class="faq-quest">
+            <span>What is Netflix?</span>
+            <span class="plus">+</span>
+        </div>
+        <div class="answer">Hi I am inside the faq</div>
     </div>
 
     <div class="faq1">
-        <span>What can I watch on Netflix?</span>
-        <span>+</span>
+        <div class="faq-quest">
+            <span>How much does Netflix cost?</span>
+            <span class="plus">+</span>
+        </div>
+        <div class="answer">Hi I am inside the faq1</div>
     </div>
 
     <div class="faq1">
-        <span>Where can I watch?</span>
-        <span>+</span>
+        <div class="faq-quest">
+            <span>What can I watch on Netflix?</span>
+            <span class="plus">+</span>
+        </div>
+        <div class="answer">Hi I am inside the faq2</div>
+    </div>
+
+    <div class="faq1">
+        <div class="faq-quest">
+            <span>Where can I watch?</span>
+            <span class="plus">+</span>
+        </div>
+        <div class="answer">Hi I am inside the faq3</div>
     </div>
     <div class="separation"></div>
 
-<footer>
-    <div class="contact">
-        Questions? Call 000-800-919-1694
-    </div>
-
-    <div class="foot">
-        <div class="con">
-            <a href="#">Investor Relations</a>
-            <a href="#">Jobs</a>
-            <a href="#">Ways to Watch</a>
-            <a href="#">Corporate Information</a>
+    <footer>
+        <div class="contact">
+            Questions? Call 000-800-919-1694
         </div>
 
-        <div class="con">
-            <a href="#">Media Centre</a>
-            <a href="#">Privacy</a>
-            <a href="#">Cookie Preferences</a>
-            <a href="#">Legal Notices</a>
-        </div>
+        <div class="foot">
+            <div class="con">
+                <a href="#">Investor Relations</a>
+                <a href="#">Jobs</a>
+                <a href="#">Ways to Watch</a>
+                <a href="#">Corporate Information</a>
+            </div>
 
-        <div class="con">
-            <a href="#">Help Centre</a>
-            <a href="#">Account</a>
-            <a href="#">Speed Test</a>
-            <a href="#">Only on Netflix</a>
-        </div>
+            <div class="con">
+                <a href="#">Media Centre</a>
+                <a href="#">Privacy</a>
+                <a href="#">Cookie Preferences</a>
+                <a href="#">Legal Notices</a>
+            </div>
 
-        <div class="con">
-            <a href="#">Terms of Use</a>
-            <a href="#">Contact Us</a>
-        </div>
-    </div>
-</footer>
+            <div class="con">
+                <a href="#">Help Centre</a>
+                <a href="#">Account</a>
+                <a href="#">Speed Test</a>
+                <a href="#">Only on Netflix</a>
+            </div>
 
+            <div class="con">
+                <a href="#">Terms of Use</a>
+                <a href="#">Contact Us</a>
+            </div>
+        </div>
+    </footer>
 
     <script src="script.js"></script>
-
 </body>
-
 </html>
