--- a/Netflix/netflix.html
+++ b/Netflix/netflix.html
@@ -93,7 +93,7 @@
             <span>What is Netflix?</span>
             <span class="plus">+</span>
         </div>
-        <div class="answer">Hi I am inside the faq</div>
+        <div class="answer">Netflix is a Web-series, movies platform.</div>
     </div>
 
     <div class="faq1">
@@ -101,7 +101,7 @@
             <span>How much does Netflix cost?</span>
             <span class="plus">+</span>
         </div>
-        <div class="answer">Hi I am inside the faq1</div>
+        <div class="answer">Rs. 149 per month.</div>
     </div>
 
     <div class="faq1">
@@ -109,7 +109,7 @@
             <span>What can I watch on Netflix?</span>
             <span class="plus">+</span>
         </div>
-        <div class="answer">Hi I am inside the faq2</div>
+        <div class="answer">There are many upcomings on the website.</div>
     </div>
 
     <div class="faq1">
@@ -117,7 +117,7 @@
             <span>Where can I watch?</span>
             <span class="plus">+</span>
         </div>
-        <div class="answer">Hi I am inside the faq3</div>
+        <div class="answer">On Netflix.</div>
     </div>
     <div class="separation"></div>
 
